@@ -29,3 +29,4 @@ domocookie.txt
 domoticz.exe
 /Config/zwcfg_*.xml
 /makebetarob
+/plugins/manifest.xml
